--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
 
 <head>
 	<meta charset="UTF-8">
@@ -94,6 +94,7 @@
 			</div>
 		</div>
 	</section>
+
 	<section class="skills section" id="skills">
 		<div class="container flex-center">
 			<h1 class="section-title-01">SKills</h1>
@@ -183,7 +184,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- contact -->
+	
 	<section class="contact section" id="contact">
 		<div class="container flex-center">
 			<h1 class="section-title-01">Contact me</h1>
@@ -206,7 +207,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- footer -->
+	
 	<footer>
 		<div class="footer-container">
 			<div class="about group">
